# laetibeat-server

./: .gitignore  API.md  API_TEST.md  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  test_player.html
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/source/: Cargo.toml
crates/source/src/: audio_stream.rs  lib.rs
