[package]
name = "music_backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.0", features = ["net", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.18"
tokio-util = { version = "0.7", features = ["io"] }
music_backend_core = { path = "../core" }
music_backend_source = { path = "../source" }
