[package]
name = "music_backend_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
music_backend_engine = { path = "../engine" }
music_backend_source = { path = "../source" }

[dev-dependencies]
tempfile = "3.8"
